# torch-offload

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/torch_offload/: __init__.py  _bnb.py  _devices.py  _dtensor.py  _quanto.py  _torchao_float8.py  _torchao_granularity.py  _torchao_int4_tile.py  _torchao_int8.py  _torchao_mx.py  _torchao_nvfp4.py  _torchao_static_float8.py  _triton_static_float8.py  block_compile.py  bnb4bit_adapter.py  bnb8bit_adapter.py  cached_model_runner.py  composite_component.py  dtensor_adapter.py  float8_adapter.py  gguf_adapter.py  gguf_dequant.py  int4_tile_adapter.py  int8_adapter.py  lora.py  merge.py  model_cache.py  model_offloader.py  module_names.py  mps_weights.py  mx_adapter.py  nvfp4_adapter.py  pinned_bindings.py  pinned_buffer.py  pinned_component.py  pinned_groups.py  pinned_module.py  pinned_param.py  pinned_weights.py  protocols.py  (+14 more)
tests/: conftest.py  test_block_compile.py  test_bnb4bit_adapter.py  test_bnb8bit_adapter.py  test_dtensor_adapter.py  test_float8_adapter.py  test_gguf_adapter.py  test_int4_tile_adapter.py  test_int8_adapter.py  test_merged_lora.py  test_model_cache.py  test_model_offloader.py  test_model_offloader_whole_model.py  test_module_names.py  test_mps_weights.py  test_mx_adapter.py  test_nvfp4_adapter.py  test_pinned_buffer.py  test_pinned_module.py  test_pinned_param.py  test_pinned_weights.py  test_resource_cache.py  test_slot_collection.py  test_slots.py  test_static_float8_adapter.py  test_streamed_heterogeneous.py  test_tensor_adapter_registry.py
