[project]
name = "torch-offload"
version = "0.1.0"
description = "Model-agnostic GPU/CPU memory management for PyTorch — pinned-host offloading, block streaming, and LRU model caching."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7",
]

[project.optional-dependencies]
gguf = ["gguf"]
nvfp4 = ["numpy", "torch>=2.8", "torchao>=0.17"]
quanto = ["optimum-quanto"]
all = ["gguf", "numpy", "optimum-quanto", "torch>=2.8", "torchao>=0.17"]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest~=9.0",
    "ruff>=0.14.3",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pyright]
include = ["src/torch_offload"]
exclude = ["tests"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingImports = "none"
reportPrivateImportUsage = "none"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "ANN", "B", "A", "COM", "C4",
    "DTZ", "EXE", "PIE", "T20", "PT", "SIM", "ARG", "PTH",
    "ERA", "RUF", "PL",
]
ignore = [
    "ANN002",
    "ANN003",
    "ANN204",
    "COM812",
    "PTH123",
    "PLR2004",
    "N812",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # Tests intentionally use local helpers, optional imports guarded by
    # importorskip(), and assertion-oriented context-manager structure.
    "ANN",
    "ARG",
    "B007",
    "ERA001",
    "F841",
    "I001",
    "PLC0415",
    "PT001",
    "PT012",
    "PT018",
    "RUF003",
    "RUF012",
    "RUF043",
    "RUF059",
    "SIM108",
    "SIM117",
]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
known-first-party = ["torch_offload"]
