[project]
name = "torch-offload"
version = "0.1.0"
description = "Model-agnostic GPU/CPU memory management for PyTorch — pinned-host offloading, block streaming, and LRU model caching."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "torch>=2.12",
]

[project.optional-dependencies]
bnb = ["bitsandbytes>=0.49"]
torchao = ["torchao>=0.17"]
gguf = ["gguf>=0.18"]
quanto = ["optimum-quanto>=0.2"]
all = ["bitsandbytes>=0.49", "gguf>=0.18", "optimum-quanto>=0.2", "torchao>=0.17"]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pyright>=1.1.409",
    "pytest~=9.0",
    "ruff>=0.14.3",
    # Every adapter backend, so `uv sync` yields a complete test environment
    # (otherwise the bnb / torchao / gguf / quanto adapter suites silently skip).
    "torch-offload[all]",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pyright]
include = ["src/torch_offload"]
exclude = ["tests"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingImports = "none"
reportPrivateImportUsage = "none"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchao = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "ANN", "B", "A", "COM", "C4",
    "DTZ", "EXE", "PIE", "T20", "PT", "SIM", "ARG", "PTH",
    "ERA", "RUF", "PL",
]
ignore = [
    "ANN002",
    "ANN003",
    "ANN204",
    "COM812",
    "PTH123",
    "PLR2004",
    "N812",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # Tests intentionally use local helpers, optional imports guarded by
    # importorskip(), and assertion-oriented context-manager structure.
    "ANN",
    "ARG",
    "B006",
    "B007",
    "ERA001",
    "F841",
    "I001",
    "PLC0415",
    "PT001",
    "PT012",
    "PT018",
    "RUF003",
    "RUF012",
    "RUF043",
    "RUF059",
    "SIM108",
    "SIM117",
]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
known-first-party = ["torch_offload"]
